# MetaDetective

./: MetaDetective.py  README.md  TODO.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: bandit.yml  docker-image.yml  pep8.yml  python-publish.yml  static.yml  unittest.yml
docker/: Dockerfile  README.md  remove.sh  start.sh
docs/website/: index.html
docs/website/css/: base.css  main.css  vendor.css
docs/website/js/: main.js  plugins.js
examples/: MetaDetective.docx
src/: MetaDetective.py  pyproject.toml
src/MetaDetective/: MetaDetective.py
tests/: test_MetaDetective.py
