[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MetaDetective"
version = "1.0.9"
description = "Unleash Metadata Intelligence with MetaDetective. Your Assistant Beyond Metagoofil."
authors = [{ name = "Franck Ferman", email = "contact@franckferman.fr" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: POSIX :: Linux",
    "Topic :: Security",
    "Topic :: Utilities"
]
readme = { file = "README.md", content-type = "text/markdown" }
keywords = ["metadata", "osint", "cyber-security"]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/franckferman/MetaDetective"

[project.scripts]
MetaDetective = "MetaDetective.MetaDetective:main"

