[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MetaDetective"
version = "1.0.3"
description = "Unleash Metadata Intelligence with MetaDetective. Your Assistant Beyond Metagoofil."
authors = [{ name = "Franck Ferman", email = "contact@franckferman.fr" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: POSIX :: Linux",
    "Topic :: Security",
    "Topic :: Utilities"
]
readme = "README.md"
keywords = ["metadata", "osint", "cyber-security"]
requires-python = ">=3.9.0"

[project.urls]
home = "https://github.com/franckferman/MetaDetective"
repository = "https://github.com/franckferman/MetaDetective"
documentation = "https://github.com/franckferman/MetaDetective/blob/stable/README.md"

[project.scripts]
MetaDetective = "MetaDetective:main"
